# connect-extension-service-delivery-notifications

./: .eslintignore  .eslintrc.yaml  .flake8  .gitignore  CHANGELOG.md  README.md  babel.config.js  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  setupJest.js
.github/workflows/: test.yml
cen/: database.py  events.py  extension.json  jinja.py  mail.py  models.py  webapp.py
cen/static/: delivery.html  delivery_old.html  example.md  index.html  settings.html
cen/static/css/: style.css
cen/static/js/: delivery.js  index.js  markdown-it.js  settings.js  toolkit.js
tests/: conftest.py  delivery.spec.js  index.spec.js  settings.spec.js  test_events.py  test_jinja.py  test_mail.py  test_webapp.py
